Metric of Features implemented

--- a/data_preprocessing_template.ipynb
+++ b/data_preprocessing_template.ipynb
@@ -22,12 +22,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "wfFEXZC0WS-V"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in /home/snehomoy/anaconda3/lib/python3.8/site-packages (1.20.2)\n",
+      "Requirement already satisfied: pandas in /home/snehomoy/anaconda3/lib/python3.8/site-packages (1.2.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from pandas) (2021.1)\n",
+      "Requirement already satisfied: numpy>=1.16.5 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from pandas) (1.20.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
+      "Requirement already satisfied: matplotlib in /home/snehomoy/anaconda3/lib/python3.8/site-packages (3.3.4)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (1.3.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (8.3.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (2.8.1)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: numpy>=1.15 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (1.20.2)\n",
+      "Requirement already satisfied: six in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from cycler>=0.10->matplotlib) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install numpy\n",
+    "!pip install pandas\n",
+    "!pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -47,15 +79,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "aqHTg9bxWT_u"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-16-d92391b503ed>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-d92391b503ed>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    x = dataset.iloc[:, :-1].values '''Metric of features'''\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "dataset = pd.read_csv()"
+    "dataset = pd.read_csv('Data.csv')\n",
+    "x = dataset.iloc[:, :-1].values //Metric of features''\n",
+    "y = dataset.iloc[:, -1].values  '''Dependent variable vector'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 nan]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' nan 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['No' 'Yes' 'No' 'No' 'Yes' 'Yes' 'No' 'Yes' 'No' 'Yes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
    ]
   },
   {
