Metric of Features implemented

--- a/data_preprocessing_template.ipynb
+++ b/data_preprocessing_template.ipynb
@@ -79,31 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "aqHTg9bxWT_u"
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-d92391b503ed>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-d92391b503ed>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    x = dataset.iloc[:, :-1].values '''Metric of features'''\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = pd.read_csv('Data.csv')\n",
-    "x = dataset.iloc[:, :-1].values //Metric of features''\n",
-    "y = dataset.iloc[:, -1].values  '''Dependent variable vector'''"
+    "metricOfFeatures = dataset.iloc[:, :-1].values\n",
+    "dependentVariableVector = dataset.iloc[:, -1].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -124,12 +115,12 @@
     }
    ],
    "source": [
-    "print(x)"
+    "print(metricOfFeatures)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +132,7 @@
     }
    ],
    "source": [
-    "print(y)"
+    "print(dependentVariableVector)"
    ]
   },
   {
