--- a/data_preprocessing_tools.ipynb
+++ b/data_preprocessing_tools.ipynb
@@ -22,7 +22,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sklearn in /home/snehomoy/anaconda3/lib/python3.8/site-packages (0.0)\n",
+      "Requirement already satisfied: scikit-learn in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from sklearn) (0.24.2)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from scikit-learn->sklearn) (1.20.3)\n",
+      "Requirement already satisfied: joblib>=0.11 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from scikit-learn->sklearn) (1.0.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from scikit-learn->sklearn) (2.2.0)\n",
+      "Requirement already satisfied: scipy>=0.19.1 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from scikit-learn->sklearn) (1.6.2)\n",
+      "Requirement already satisfied: np in /home/snehomoy/anaconda3/lib/python3.8/site-packages (1.0.2)\n",
+      "Requirement already satisfied: matplotlib in /home/snehomoy/anaconda3/lib/python3.8/site-packages (3.3.4)\n",
+      "Requirement already satisfied: pandas in /home/snehomoy/anaconda3/lib/python3.8/site-packages (1.2.5)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (8.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (1.3.1)\n",
+      "Requirement already satisfied: numpy>=1.15 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from matplotlib) (1.20.3)\n",
+      "Requirement already satisfied: six in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from cycler>=0.10->matplotlib) (1.16.0)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /home/snehomoy/anaconda3/lib/python3.8/site-packages (from pandas) (2021.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install sklearn\n",
+    "!pip install np matplotlib pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -47,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -56,13 +90,13 @@
    "outputs": [],
    "source": [
     "dataset = pd.read_csv('Data.csv')\n",
-    "X = dataset.iloc[:, :-1].values\n",
+    "x = dataset.iloc[:, :-1].values\n",
     "y = dataset.iloc[:, -1].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -102,12 +136,12 @@
     }
    ],
    "source": [
-    "print(X)"
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -153,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -163,13 +197,13 @@
    "source": [
     "from sklearn.impute import SimpleImputer\n",
     "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
-    "imputer.fit(X[:, 1:3])\n",
-    "X[:, 1:3] = imputer.transform(X[:, 1:3])"
+    "imputer.fit(x[:, 1:3])\n",
+    "x[:, 1:3] = imputer.transform(x[:, 1:3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -195,21 +229,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['France' 44.0 72000.0]\n",
-      " ['Spain' 27.0 48000.0]\n",
-      " ['Germany' 30.0 54000.0]\n",
-      " ['Spain' 38.0 61000.0]\n",
-      " ['Germany' 40.0 63777.77777777778]\n",
-      " ['France' 35.0 58000.0]\n",
-      " ['Spain' 38.77777777777778 52000.0]\n",
-      " ['France' 48.0 79000.0]\n",
-      " ['Germany' 50.0 83000.0]\n",
-      " ['France' 37.0 67000.0]]\n"
+      "0.24.2\n"
      ]
     }
    ],
    "source": [
-    "print(X)"
+    "print(sklearn.__version__)"
    ]
   },
   {
