Taken care of missing data in the dataset

--- a/data_preprocessing_tools.ipynb
+++ b/data_preprocessing_tools.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -229,12 +229,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.24.2\n"
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 63777.77777777778]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' 38.77777777777778 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
      ]
     }
    ],
    "source": [
-    "print(sklearn.__version__)"
+    "print(x)"
    ]
   },
   {
